Major Refactoring and Feature Enhancements * vmdata.pl works also for freshly created VMs * Show ESX server in VM overview and VM data * Show user GECOS field in VM overview * vm-find.pl can now search for VM name regex * Remove dependency on vm.conf, all data is now tracked in lab.conf * vm.conf is still beeing written and contains the full VM dump * Simplify the code, remove obsolete code parts, more OO style * Performance improvements by doing more efficient API calls and by   requesting only relevant properties * Rework unit tests   * Do not depend on previous tests for test data   * Reorder tests: main scripts start with 20- * Fix a regression bug which would ignore the vsphere network filter   in lml-maintenance, create test for that feature * Convert more scripts to new coding and object style

--- a/src/lml/lib/css/lml.css
+++ b/src/lml/lib/css/lml.css
@@ -22,12 +22,9 @@
 	font-style: italic;
 }
 
-.vm_without_data {
-	color: grey;
-}
-
 .vmhostname {
 	font-family: monospace;
+	font-size: 115%;
 }
 
 /* tabs */
