DEVEN-199 adding waiting image for initial loading of view data

--- a/src/lml/lib/css/lml.css
+++ b/src/lml/lib/css/lml.css
@@ -149,7 +149,7 @@ div.DTTT_container {
 }
 
 #waiting {
-    display: none;
+    display: block;
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
