DEVEN-199 moved web content to src/lml root

--- a/src/lml/css/lml.css
+++ b/src/lml/css/lml.css
@@ -162,6 +162,7 @@ div.DTTT_container {
     top: 50%;
     margin-left: -50px; 
     margin-top: -50px; 
+    z-index: 100; /* always on top */
 }
 
 /* button */
