DEVEN-199 Display host status in a more eye-friendly way and show if host is active.

--- a/src/lml/css/lml.css
+++ b/src/lml/css/lml.css
@@ -222,7 +222,9 @@ div.DTTT_container {
 }
 
 .green {
-	background-color: greenyellow;
+	background-color: limegreen;
 }
 
+.inactive {
+	display: none;
 }
