--- a/src/lml/css/lml.css
+++ b/src/lml/css/lml.css
@@ -4,6 +4,7 @@
 
 
 div.main_content {
+	margin-bottom: 20px;
 	margin-left: 20px;
 }
 
@@ -24,24 +25,25 @@ div.main_content {
 }
 
 #footer {
+	background: #fff;
+	position: fixed;
+	bottom: 0;
 	border-top: 1px solid black;
+	box-sizing:border-box;
 	margin-top: 10px;
-	padding-top: 10px;
-	padding-left: 10px;
-	margin-bottom: -10px;
+	overflow: hidden;
+	padding: 10px;
 	font-style: italic;
-	float: left;
 	width: 100%;
 }
-
+.left {
+	float: left;
+	position: relative;
+}
 .right {
-	border-top: 1px solid black;
+	float: right;
+	position: relative;
 	right: 0px;
-	position: absolute;
-	padding-right: 10px;
-	margin-top: 10px;
-	padding-top: 10px;
-	width: auto;%
 }
 
 .vmhostname {
@@ -222,7 +224,7 @@ div.DTTT_container {
 }
 
 .green {
-	background-color: limegreen;
+	background-color:  greenyellow;
 }
 
 .inactive {
