--- a/src/lml/css/lml.css
+++ b/src/lml/css/lml.css
@@ -2,7 +2,6 @@
   margin-top: 20px;
 }
 
-
 div.main_content {
   margin-bottom: 20px;
   margin-left: 20px;
@@ -29,7 +28,7 @@ div.main_content {
   position: fixed;
   bottom: 0;
   border-top: 1px solid black;
-  box-sizing:border-box;
+  box-sizing: border-box;
   margin-top: 10px;
   overflow: hidden;
   padding: 10px;
@@ -37,10 +36,12 @@ div.main_content {
   width: 100%;
   z-index: 101;
 }
+
 .left {
   float: left;
   position: relative;
 }
+
 .right {
   float: right;
   position: relative;
@@ -56,6 +57,7 @@ div.main_content {
 #tabs {
   margin-top: 25px;
 }
+
 .main_content {
   overflow: auto;
   padding-bottom: 100px;
@@ -91,7 +93,8 @@ div.main_content {
   font-weight: bold;
 }
 
-.tabsLite-panel { /*background-color: #F6F6F6;*/
+.tabsLite-panel {
+  /*background-color: #F6F6F6;*/
   padding: 10px;
   margin-top: 5px;
   border-top: solid 2px #CCC;
@@ -126,11 +129,11 @@ div.DTTT_container {
   float: left;
 }
 
-.search span.indent{
+.search span.indent {
   padding-right: 3px;
 }
 
-.search div.indent{
+.search div.indent {
   padding-left: 48px;
 }
 
@@ -153,7 +156,7 @@ div.DTTT_container {
   border: 1px solid;
   color: #fff;
   padding: 15px;
-  text-shadow: 0 1px 0 rgba(0,0,0,.5);
+  text-shadow: 0 1px 0 rgba(0, 0, 0, .5);
   margin-bottom: 10px;
 }
 
@@ -162,12 +165,12 @@ div.DTTT_container {
   border-color: #529cbe;
 }
 
-.error{
+.error {
   background-color: #df6464;
   border-color: #b95858;
 }
 
-.success{
+.success {
   background-color: #7ebe5c;
   border-color: #6a9751;
 }
@@ -181,13 +184,14 @@ div.DTTT_container {
   display: block;
   position: fixed;
   text-align: center;
-  background-color: rgba(0,0,0,0.6);
+  background-color: rgba(0, 0, 0, 0.6);
   left: 0px;
   right: 0px;
   bottom: 0px;
   top: 0px;
   z-index: 100; /* always on top */
 }
+
 #waiting > img {
   position: absolute;
   top: 50%;
@@ -242,7 +246,7 @@ div.DTTT_container {
 }
 
 .green {
-  background-color:  greenyellow;
+  background-color: greenyellow;
 }
 
 .inactive {
@@ -260,4 +264,99 @@ div.remoteTooltip pre {
   padding-bottom: 45px;
   z-index: 100;
   background-color: white;
+}
+
+.pagination {
+  cursor: hand;
+  display: inline-block;
+  padding-left: 0;
+  border-radius: 4px;
+  display: block;
+}
+
+div.pagination-container {
+  width: 100%;
+  align-items: center;
+}
+
+div.pagination-container2 {
+   margin-left: auto;
+   margin-right: auto;
+   width: 548px;
+}
+
+.pagination > li {
+  display: inline
+}
+
+.pagination > li > a, .pagination > li > span {
+
+  position: relative;
+  float: left;
+  padding: 6px 12px;
+  margin-left: -1px;
+  line-height: 1.428571429;
+  text-decoration: none;
+  background-color: #fff;
+  border: 1px solid #ddd
+}
+
+.pagination > li:first-child > a, .pagination > li:first-child > span {
+  margin-left: 0;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px
+}
+
+.pagination > li:last-child > a, .pagination > li:last-child > span {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px
+}
+
+.pagination > li > a:hover, .pagination > li > span:hover, .pagination > li > a:focus, .pagination > li > span:focus {
+  background-color: #eee
+}
+
+.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
+  z-index: 2;
+  color: #fff;
+  cursor: default;
+  background-color: #428bca;
+  border-color: #428bca
+}
+
+.pagination > .disabled > span, .pagination > .disabled > span:hover, .pagination > .disabled > span:focus, .pagination > .disabled > a, .pagination > .disabled > a:hover, .pagination > .disabled > a:focus {
+  color: #999;
+  cursor: not-allowed;
+  background-color: #fff;
+  border-color: #ddd
+}
+
+.pagination-lg > li > a, .pagination-lg > li > span {
+  padding: 10px 16px;
+  font-size: 18px
+}
+
+.pagination-lg > li:first-child > a, .pagination-lg > li:first-child > span {
+  border-bottom-left-radius: 6px;
+  border-top-left-radius: 6px
+}
+
+.pagination-lg > li:last-child > a, .pagination-lg > li:last-child > span {
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px
+}
+
+.pagination-sm > li > a, .pagination-sm > li > span {
+  padding: 5px 10px;
+  font-size: 12px
+}
+
+.pagination-sm > li:first-child > a, .pagination-sm > li:first-child > span {
+  border-bottom-left-radius: 3px;
+  border-top-left-radius: 3px
+}
+
+.pagination-sm > li:last-child > a, .pagination-sm > li:last-child > span {
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px
 }
