new_vm: removed jQuery form handling and implemented form hanlding in agular style

--- a/src/lml/css/lml.css
+++ b/src/lml/css/lml.css
@@ -151,7 +151,7 @@ div.DTTT_container {
 }
 
 .message {
-  display: none;
+  display: block;
   border-radius: 5px;
   border: 1px solid;
   color: #fff;
