SE-980 Display network type in host overview. Green is dvSwitch and blue is vSwitch. Grey is unknown.

--- a/src/lml/css/lml.css
+++ b/src/lml/css/lml.css
@@ -253,6 +253,19 @@ div.DTTT_container {
   display: none;
 }
 
+.network_ {
+	color: grey;
+}
+
+.network_Network {
+	color: #0B0B61;
+}
+
+.network_DistributedVirtualPortgroup {
+	color: #21610B;
+}
+
+
 div.remoteTooltip {
   z-index: 100;
   position: absolute;
